# rag-model

./: README.md  app.py  dados.txt  pyproject.toml
