[project]
name = "ia-rag-test"
version = "0.1.0"
description = "Modelo Rag com LLM local"
authors = [
    {name = "Ana Luiza Ribeiro"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
